--- a/test/test.html
+++ b/test/test.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <title>sockdrive js ffi tests</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="external/mocha.css" />
+    <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
   </head>
   <body>
     <div id="mocha"></div>
 
-    <script src="external/chai.js"></script>
-    <script src="external/mocha.js"></script>
+    <script src="https://unpkg.com/chai/chai.js"></script>
+    <script src="https://unpkg.com/mocha/mocha.js"></script>
     <script class="mocha-init">
       mocha.setup("qunit");
       mocha.timeout(5000);
