Deploy index HTML with webpack
Signed-off-by: Joel Van Eenwyk <joel.vaneenwyk@gmail.com>

--- a/tests/index.html
+++ b/tests/index.html
@@ -16,8 +16,8 @@
       mocha.timeout(5000);
       mocha.checkLeaks();
     </script>
-    <script src="../dist/sockdriveFat.js"></script>
-    <script src="../dist/test.js"></script>
+    <script src="sockdriveFat.js"></script>
+    <script src="./runTests.js"></script>
     <script class="mocha-exec">
       runTests().catch(console.error);
     </script>
